# cuda-cuckoo-hashing

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: cuda_array.cuh  hash_func.cuh  hash_table.cuh  helper.cuh  rng.cuh  timer.cuh  universal_hash.cuh  xxhash.cuh
report/: bibliography.bib  main.tex
src/: CMakeLists.txt  timer.cu
tests/: CMakeLists.txt  main.cu  main_test1.cu  main_test2.cu  main_test3.cu  main_test4.cu  test1.cu  test1.cuh  test2.cu  test3.cu  test4.cu
tests/bound/: CMakeLists.txt  gen_test_file.py  test.cu  test.cuh  test_10_2.cu  test_10_3.cu  test_12_2.cu  test_12_3.cu  test_144_2.cu  test_144_3.cu  test_14_2.cu  test_14_3.cu  test_16_2.cu  test_16_3.cu  test_18_2.cu  test_18_3.cu  test_192_2.cu  test_192_3.cu  test_20_2.cu  test_20_3.cu  test_22_2.cu  test_22_3.cu  test_24_2.cu  test_24_3.cu  test_2_2.cu  test_2_3.cu  test_36_2.cu  test_36_3.cu  test_48_2.cu  test_48_3.cu  test_4_2.cu  test_4_3.cu  test_6_2.cu  test_6_3.cu  test_72_2.cu  test_72_3.cu  test_8_2.cu  test_8_3.cu  test_96_2.cu  test_96_3.cu
tests/correctness/: CMakeLists.txt  test.cu  test.cuh
tests/insert/: CMakeLists.txt  test.cu  test.cuh  test_10_2.cu  test_10_3.cu  test_11_2.cu  test_11_3.cu  test_12_2.cu  test_12_3.cu  test_13_2.cu  test_13_3.cu  test_14_2.cu  test_14_3.cu  test_15_2.cu  test_15_3.cu  test_16_2.cu  test_16_3.cu  test_17_2.cu  test_17_3.cu  test_18_2.cu  test_18_3.cu  test_19_2.cu  test_19_3.cu  test_20_2.cu  test_20_3.cu  test_21_2.cu  test_21_3.cu  test_22_2.cu  test_22_3.cu  test_23_2.cu  test_23_3.cu  test_24_2.cu  test_24_3.cu
tests/lookup/: CMakeLists.txt  gen_test_file.py  test.cu  test.cuh  test_0_2.cu  test_0_3.cu  test_10_2.cu  test_10_3.cu  test_1_2.cu  test_1_3.cu  test_2_2.cu  test_2_3.cu  test_3_2.cu  test_3_3.cu  test_4_2.cu  test_4_3.cu  test_5_2.cu  test_5_3.cu  test_6_2.cu  test_6_3.cu  test_7_2.cu  test_7_3.cu  test_8_2.cu  test_8_3.cu  test_9_2.cu  test_9_3.cu
tests/size/: CMakeLists.txt  gen_test_file.py  test.cu  test.cuh  test_101_2.cu  test_101_3.cu  test_102_2.cu  test_102_3.cu  test_105_2.cu  test_105_3.cu  test_110_2.cu  test_110_3.cu  test_120_2.cu  test_120_3.cu  test_130_2.cu  test_130_3.cu  test_140_2.cu  test_140_3.cu  test_150_2.cu  test_150_3.cu  test_160_2.cu  test_160_3.cu  test_170_2.cu  test_170_3.cu  test_180_2.cu  test_180_3.cu  test_190_2.cu  test_190_3.cu  test_200_2.cu  test_200_3.cu
tools/: cmp.py  draw1.py  draw1_data.py  draw2.py  draw3.py  draw4.py  table1.py  table2.py  table3.py  table4.py
